--- a/gym_frontend/pubspec.yaml
+++ b/gym_frontend/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.7.0
   http: ^1.2.0
+  file_picker: ^8.1.6
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
